# domjudge-tool-standalone

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
docker/: entrypoint.sh  standalone-logrotate
ui/: home.py  import-users-teams-out.csv
ui/customization/: _problems.py  _submissions.py  _users.py  emails.py  general.py  problems.py  scoreboard.py  submissions.py  users.py
ui/customization/models/: __init__.py  category.py  contest.py  language.py
ui/customization/serverices/api/: v4.py
ui/customization/serverices/web/: __init__.py  base.py  v7.py
ui/customization/utils/email/: helper.py  smtp.py
ui/pages/: emails.py  general.py  problems.py  scoreboard.py  submissions.py  user_info.py  users.py  viewsubmission.py
ui/templates/csv/: import-users-teams.csv
ui/templates/txt/: body.txt
ui/utils/: check.py  file.py  login.py  submissions.py  users.py  web.py
